// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineUL renders children separated by default 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
  >
    <ul>
      <li>
        <div>
          First div
        </div>
        , 
      </li>
      <li>
        <div>
          Second div
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`InlineUL renders children with class 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__ di"
  >
    <ul>
      <li>
        <div>
          First div
        </div>
        , 
      </li>
      <li>
        <div>
          Second div
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
